--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
   </script>
   <!-- Titulo del documento -->
-  <title>Block Jumper Gamer</title>
+  <title>Juego de números</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <div class="card" style="width: 15rem;">
       <div class="card-body">
         <!-- Enlace play y redirige a la siguiente página-->
-        <a class="nav-link" href="/gamer"><img
+        <a class="nav-link" href="/evalua"><img
             src="https://th.bing.com/th/id/OIP.AkyxV8LZBnTA8re-YvYUmAHaFj?pid=ImgDet&rs=1" height="120" width="200" />
           <br>
           Luis Mendez</a>
@@ -34,7 +34,7 @@
     <div class="card" style="width: 15rem;">
       <div class="card-body">
         <!-- Enlace play y redirige a la siguiente página-->
-        <a class="nav-link" href="/gamer"><img
+        <a class="nav-link" href="/evalua"><img
             src="https://th.bing.com/th/id/OIP.CMzMC1XMC6gejM0OLMLNTgHaHa?pid=ImgDet&rs=1" height="120" width="200" />
           <br>
           Pablo Escobar</a>
@@ -44,7 +44,7 @@
     <div class="card" style="width: 15rem;">
       <div class="card-body">
         <!-- Enlace play y redirige a la siguiente página-->
-        <a class="nav-link" href="/gamer"><img
+        <a class="nav-link" href="/evalua"><img
             src="https://i.pinimg.com/originals/59/d3/f3/59d3f399cfd675d734bf35e5443480fa.jpg" height="120" width="200" />
           <br>
           Paula Gomez</a>
@@ -54,7 +54,7 @@
     <div class="card" style="width: 15rem;">
       <div class="card-body">
         <!-- Enlace play y redirige a la siguiente página-->
-        <a class="nav-link" href="/gamer"><img
+        <a class="nav-link" href="/evalua"><img
             src="https://www.catster.com/wp-content/uploads/2015/06/bathroom-3.jpg" height="120" width="200" />
           <br>
           Lucia Vera</a>
@@ -64,7 +64,7 @@
     <div class="card" style="width: 15rem;">
       <div class="card-body">
         <!-- Enlace play y redirige a la siguiente página-->
-        <a class="nav-link" href="/gamer"><img
+        <a class="nav-link" href="/evalua"><img
             src="https://live.staticflickr.com/1/158845078_8377cc52ce.jpg" height="120" width="200" />
           <br>
           Maria Vega</a>
